src/objects/DisableAutomation__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>A dedicated custom setting that can disable automation like Triggers,Workflows,BatchJobs etc.</description>
    <fields>
        <fullName>Disable_All_Non_OBM_Workflows__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to true, will disable all Workflows for some objects, except the one that are firing OBMs. There is a separate custom setting for that. See documentation for which objects.</description>
        <label>Disable All Non-OBM Workflows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_All_OBM_Workflows__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to true,will disable all OBM Workflows.</description>
        <label>Disable All OBM Workflows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_All_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to true,will disable all triggers from executing.</description>
        <label>Disable All Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_All_Validation_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to true, all validation rules will be bypassed.</description>
        <label>Disable All Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suppress_AccountTeamMemberSync_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to true,will disable the batch job.</description>
        <label>Suppress AccountTeamMemberSync Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suppress_Deletion_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to true,will disable the batch job.</description>
        <label>Suppress Deletion Job</label>
        <type>Checkbox</type>
    </fields>
    <label>DisableAutomation</label>
</CustomObject>